--- a/pkg/config/testdata/config.toml
+++ b/pkg/config/testdata/config.toml
@@ -170,7 +170,7 @@ secrets = "env(AUTH_SEND_SMS_SECRETS)"
 # Configure one of the supported SMS providers: `twilio`, `twilio_verify`, `messagebird`, `textlocal`, `vonage`.
 [auth.sms.twilio]
 enabled = true
-account_sid = "account_sid"
+account_sid = "env(SECRET_TWILLIO_SID)"
 message_service_sid = "message_service_sid"
 # DO NOT commit your Twilio auth token to git. Use environment variable substitution instead:
 auth_token = "env(TWILIO_AUTH_TOKEN)"
@@ -254,9 +254,7 @@ allowed_mime_types = ["image/png"]
 
 
 [dynamic_env.vault]
-access_key = "abcdefg"
 env_vars = [
     "some-id:SOME_SECRET",
-    "some\\:id-with-double-dot:SOME_SECRET2",
-    "some-id:SOME_SECRE:T",
+    "some:id-with-double-dot:SECRET_TWILLIO_SID",
 ]
